trunk/Archive2/f8/f449a34a2a19da/output
main.cpp: In instantiation of 'constexpr bool foo() [with unsigned int N = 10u]':
main.cpp:18:13:   required from here
main.cpp:6:25: warning: unused variable 'arr' [-Wunused-variable]
     std::array<char, N> arr;
                         ^
main.cpp:8:1: error: body of constexpr function 'constexpr bool foo() [with unsigned int N = 10u]' not a return-statement
 }
 ^
